typesafe_idb/tests/ui/txn_for_store_not_in_db.stderr
error[E0277]: the trait bound `typesafe_idb::Chain<RepositoryStoreMarker, typesafe_idb::Chain<(), ()>>: StoreMarker<User>` is not satisfied
  --> tests/ui/txn_for_store_not_in_db.rs:45:19
   |
45 |         User::txn(&db).rw();
   |         --------- ^^^ the trait `StoreMarker<User>` is not implemented for `typesafe_idb::Chain<RepositoryStoreMarker, typesafe_idb::Chain<(), ()>>`
   |         |
   |         required by a bound introduced by this call
   |
   = help: the trait `StoreMarker<Store>` is implemented for `typesafe_idb::Chain<Head, Tail>`
note: required by a bound in `txn`
  --> src/store.rs
   |
   |     fn txn<'db, DbTableMarkers>(
   |        --- required by a bound in this associated function
...
   |         DbTableMarkers: StoreMarker<Self>,
   |                         ^^^^^^^^^^^^^^^^^ required by this bound in `Store::txn`
